--- a/src/app/topologytype/topologytype-edit.component.html
+++ b/src/app/topologytype/topologytype-edit.component.html
@@ -17,18 +17,24 @@
                     <label>Name</label>
                     <input  class="form-control" type="text" [(ngModel)]="model.Name" placeholder="Name" required />
                 </div>
-                <div class="form-group" *ngFor="let env of model.EnvironmentPurposes; let i = index;">
+                <!--<div class="form-group" *ngFor="let env of model.EnvironmentPurposes; let i = index;">
                     <label>Purpose</label>
                     <input class="form-control" type="text" [(ngModel)]="model.EnvironmentPurposes[i]" placeholder="Purpose" required />
-                </div>
-                 <ul class="list-group">
-                    <li *ngFor="let env of model.EnvironmentPurposes; let i = index;" class="list-group-item">
-                        <label>Purpose</label>
-                        <input type="text" [(ngModel)]="model.EnvironmentPurposes[i]" placeholder="Purpose" required />
-                        <a *ngIf="!showActionButtons" href="#" (click)="delete(env)" class="badge" aria-hidden="true">&times;</a>
-                    </li>
-                </ul>
+                </div>-->
 
+                <div class="panel panel-success">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Environment Purposes</h3>
+                        <button type="button" class="icon-pencil pull-right" (click)="addPurpose()">Add</button>
+                    </div>
+                    <ul class="list-group">
+                        <li *ngFor="let purpose of model.EnvironmentPurposes; let i = index;" class="list-group-item">
+                            <label>Purpose</label>
+                            <input type="text" [(ngModel)]="model.EnvironmentPurposes[i]" placeholder="Purpose" />
+                            <button *ngIf="!showActionButtons" (click)="deletePurpose(purpose)" class="badge" aria-hidden="true">&times;</button>
+                        </li>
+                    </ul>
+                </div>
                 <button type="button" (click)="lgModal.hide()" aria-label="Close">Close</button>
                 <button type="button" (click)="saveOrUpdate()" aria-label="Save">Save</button>
             </div>
