--- a/src/app/topologytype/topologytype-promobox.component.html
+++ b/src/app/topologytype/topologytype-promobox.component.html
@@ -2,12 +2,16 @@
 
  <div><label>Id: </label> {{model.Id}} </div>
     <div><label>Name: </label> {{model.Name}} </div>
-    <ul class="list-group">
-        <li *ngFor="let env of model.EnvironmentPurposes" class="list-group-item">
-            <span> <label>EnvironmentPurpose: </label> {{env}}</span>
-            <!--<a *ngIf="!showActionButtons" href="#" (click)="delete(env)" class="badge" aria-hidden="true">&times;</a>-->
-        </li>
-    </ul>
+     <div class="panel panel-success">
+        <div class="panel-heading">
+            <h3 class="panel-title">Environment Purposes</h3>
+        </div>
+        <ul class="list-group">
+            <li *ngFor="let env of model.EnvironmentPurposes" class="list-group-item">
+                <span> <label>EnvironmentPurpose: </label> {{env}}</span>
+            </li>
+        </ul>
+    </div>
      <div *ngIf="showActionButtons">
         <button type="button" class="btn btn-primary" [GoTo]="model" Path="{{detailsPath}}">Zoom in</button>
         <button type="button" class="btn btn-primary" (click)="topologyEdit.show()">Edit</button>
