--- a/src/app/website/website-edit.component.html
+++ b/src/app/website/website-edit.component.html
@@ -20,11 +20,19 @@
                         <option *ngFor="let c of availableEnvironments" [value]="c[0]">{{c[0]}} | ({{c[1]}})</option>
                     </select>
                 </div>
-                <div class="form-group" *ngFor="let env of model.BaseUrls; let i = index;">
-                    <label>BaseUrls</label>
-                    <input type="text" [(ngModel)]="model.BaseUrls[i]" placeholder="Url" required />
+                <div class="panel panel-success">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Base Urls</h3>
+                        <button type="button" class="icon-pencil pull-right" (click)="addBaseUrl()">Add</button>
+                    </div>
+                    <ul class="list-group">
+                        <li  *ngFor="let baseUrl of model.BaseUrls; let i = index;" class="list-group-item">
+                            <label>Base Url</label>
+                            <input  type="text" [(ngModel)]="model.BaseUrls[i]" placeholder="BaseUrl" />
+                            <!--<button *ngIf="!showActionButtons" (click)="deleteBaseUrl(baseUrl)" class="badge" aria-hidden="true">&times;</button>-->
+                        </li>
+                    </ul>
                 </div>
-
                 <button type="button" (click)="lgModal.hide()" aria-label="Close">Close</button>
                 <button type="button" (click)="saveOrUpdate()" aria-label="Save">Save</button>
             </div>
