--- a/client/src/app/webapplication/webapplication.component.css
+++ b/client/src/app/webapplication/webapplication.component.css
@@ -4,3 +4,11 @@
     padding: 10px;
     margin: 20px;
 }
+.ng-valid[required] {
+  border-left: 5px solid #42A948; /* green */
+}
+
+
+.ng-invalid {
+  border-left: 5px solid #a94442; /* red */
+}
