--- a/client/src/app/mapping/mapping-overview.component.html
+++ b/client/src/app/mapping/mapping-overview.component.html
@@ -1,8 +1,17 @@
-<h1>{{title}}</h1>
-
-<search (onKeypress)="ViewUpdate($event)" [Collection]="Collection" ></search>
-<div>
-    <button type="button" class="btn btn-success"(click)="mappingEdit.show()">Add</button>
+<div class="container">
+    <div class="row">
+        <h1>{{title}}</h1>
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        <button type="button" class="btn btn-success pull-right"(click)="mappingEdit.show()">Add</button>
+        <search (onKeypress)="ViewUpdate($event)" [Collection]="Collection" ></search>
+    </div>
 </div>
 <mapping-edit #mappingEdit></mapping-edit>
-<mapping-promobox *ngFor="let item of ViewCollection" [Model]="item"></mapping-promobox>
+<div class="container">
+    <div class="row">
+        <mapping-promobox *ngFor="let item of ViewCollection" [Model]="item"></mapping-promobox>
+    </div>
+</div>
