--- a/client/src/app/topologytype/topologytype-edit.component.html
+++ b/client/src/app/topologytype/topologytype-edit.component.html
@@ -32,8 +32,8 @@
                         </ul>
 
                     </div>
-                    <button type="button" class="btn btn-default" (click)="lgModal.hide()" aria-label="Close">Close</button>
-                    <button type="button" class="btn btn-default" [disabled]="!editForm.form.valid" (click)="saveOrUpdate()" aria-label="Save">Save</button>
+                    <!--<button type="button" class="btn btn-default" (click)="lgModal.hide()" aria-label="Close">Close</button>-->
+                    <button type="button"  class="btn btn-success"  [disabled]="!editForm.form.valid" (click)="saveOrUpdate()" aria-label="Save">Save</button>
                  </form>
             </div>
         </div>
