--- a/client/src/app/website/website-overview.component.html
+++ b/client/src/app/website/website-overview.component.html
@@ -1,8 +1,17 @@
-<h1>{{title}}</h1>
-
-<search (onKeypress)="ViewUpdate($event)" [Collection]="Collection" ></search>
-<div>
-    <button type="button" class="btn btn-success"(click)="websiteEdit.show()">Add</button>
+<div class="container">
+    <div class="row">
+        <h1>{{title}}</h1>
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        <button type="button" class="btn btn-success pull-right"(click)="websiteEdit.show()">Add</button>
+        <search (onKeypress)="ViewUpdate($event)" [Collection]="Collection" ></search>
+    </div>
 </div>
 <website-edit #websiteEdit> </website-edit>
-<website-promobox *ngFor="let item of ViewCollection" [Model]="item"></website-promobox>
+<div class="container">
+    <div class="row">
+        <website-promobox *ngFor="let item of ViewCollection" [Model]="item"></website-promobox>
+    </div>
+</div>
