--- a/client/src/app/environment/environment-promobox.component.html
+++ b/client/src/app/environment/environment-promobox.component.html
@@ -1,15 +1,23 @@
-<div *ngIf="model" class="environment" BackgroundHighlight="lightblue">
-    <div><label>Id: </label> {{model.Id}} </div>
-    <div><label>Purpose: </label> {{model.EnvironmentPurpose}} </div>
-    <div><label>DiscoveryUrl: </label> {{model.DiscoveryEndpointUrl}} </div>
-    <div><label>IsOffline: </label> {{model.IsOffline}} </div>
-    <div *ngIf="model.Credentials.ClientId"><label>ClientId: </label> {{model.Credentials.ClientId}} </div>
-    <div><label>Authentication Type: </label> {{model.Credentials.AuthenticationType}} </div>
-    <div *ngIf="showActionButtons">
-        <button type="button" class="btn btn-primary" [GoTo]="model" Path="{{detailsPath}}">Zoom in</button>
-        <button type="button" class="btn btn-primary" (click)="envEdit.show()">Edit</button>
-        <button type="button" class="btn btn-warning" (click)="deleteItem.show()">Delete</button>
-    </div>
+     <div *ngIf="model"  class="col-sm-6 ">
+        <div class="panel panel-success">
+            <div class="panel-heading">
+                <strong>Mapping ({{model.Id}})</strong>
+                <button *ngIf="showActionButtons" type="button" class="icon-pencil pull-right" (click)="envEdit.show()">Edit</button>
+                <button *ngIf="showActionButtons" type="button" class="icon-pencil pull-right" (click)="deleteItem.show()">Delete</button>
+            </div>
+            <dl class="dl-horizontal">
+                <dt>EnvironmentPurpose</dt>
+                <dd>{{model.EnvironmentPurpose}}</dd>
+                 <dt>DiscoveryUrl</dt>
+                <dd>{{model.DiscoveryEndpointUrl}}</dd>
+                 <dt>IsOffline</dt>
+                <dd>{{model.IsOffline}}</dd>
+                <dt>Authentication Type</dt>
+                <dd>{{model.Credentials.AuthenticationType}}</dd>
+                <dt *ngIf="model.Credentials.ClientId">ClientId</dt>
+                <dd *ngIf="model.Credentials.ClientId">{{model.Credentials.ClientId}}</dd>
+            </dl>
+        </div>
     <env-edit #envEdit [Model]="model"></env-edit>
     <delete-item #deleteItem [Model]="model" (onDelete)="delete($event)"></delete-item>
 </div>
