--- a/client/src/app/topologytype/topologytype-overview.component.html
+++ b/client/src/app/topologytype/topologytype-overview.component.html
@@ -5,4 +5,8 @@
     <button type="button" class="btn btn-success"(click)="topoEdit.show()">Add</button>
 </div>
 <topologytype-edit #topoEdit></topologytype-edit>
-<topologytype-promobox  *ngFor="let item of ViewCollection" [Model]="item"></topologytype-promobox>
+<div class="container">
+    <div class="row">
+         <topologytype-promobox *ngFor="let item of ViewCollection" [Model]="item"></topologytype-promobox>
+    </div>
+</div>
