--- a/client/src/app/topologytype/topologytype.component.css
+++ b/client/src/app/topologytype/topologytype.component.css
@@ -5,3 +5,11 @@
     margin: 20px;
 }
 
+.ng-valid[required] {
+  border-left: 5px solid #42A948; /* green */
+}
+
+
+.ng-invalid {
+  border-left: 5px solid #a94442; /* red */
+}
