--- a/client/src/app/webapplication/webapplication-overview.component.html
+++ b/client/src/app/webapplication/webapplication-overview.component.html
@@ -1,5 +1,16 @@
-<h1>{{title}}</h1>
+<div class="container">
+    <div class="row">
+        <h1>{{title}}</h1>
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        <search (onKeypress)="ViewUpdate($event)" [Collection]="Collection" ></search>
+    </div>
+</div>
 
-<search (onKeypress)="ViewUpdate($event)" [Collection]="Collection" ></search>
-
-<webapplication-promobox *ngFor="let item of ViewCollection" [Model]="item"></webapplication-promobox>
+<div class="container">
+    <div class="row">
+        <webapplication-promobox *ngFor="let item of ViewCollection" [Model]="item"></webapplication-promobox>
+    </div>
+</div>
