--- a/client/src/app/webapplication/webapplication-promobox.component.html
+++ b/client/src/app/webapplication/webapplication-promobox.component.html
@@ -1,14 +1,21 @@
-<div *ngIf="model" class="Webapplication" BackgroundHighlight="lightblue">
-    <div><label>Id: </label> {{model.Id}} </div>
-    <div><label>WebsiteId: </label> {{model.WebsiteId}} </div>
-    <div><label>EnvironmentPurpose: </label> {{model.EnvironmentPurpose}} </div>
-    <div><label>ContextUrl: </label> {{model.ContextUrl}} </div>
-
+<div *ngIf="model" class="col-sm-6 ">
+    <div class="panel panel-success">
+        <div class="panel-heading">
+            <strong>Mapping ({{model.Id}})</strong>
+            <button *ngIf="showActionButtons" type="button" class="icon-pencil pull-right" (click)="webappedit.show()">Edit</button>
+            <!--<button *ngIf="showActionButtons" type="button" class="icon-pencil pull-right" (click)="deleteItem.show()">Delete</button>-->
+        </div>
+        <dl class="dl-horizontal">
+            <dt>WebsiteId</dt>
+            <dd>{{model.WebsiteId}}</dd>
+            <dt>EnvironmentPurpose</dt>
+            <dd>{{model.EnvironmentPurpose}}</dd>
+            <dt>ContextUrl</dt>
+            <dd>{{model.ContextUrl}}</dd>
+        </dl>
+    </div>
     <webapplication-edit #webappedit [Model]="model"></webapplication-edit>
-
-      <div *ngIf="showActionButtons">
-        <!--<button type="button" class="btn btn-primary" [GoTo]="model" Path="{{detailsPath}}">Zoom in</button>-->
-        <button type="button" class="btn btn-primary" (click)="webappedit.Show()">Edit</button>
-        <!--<button type="button" class="btn btn-warning" (click)="smModal.show()">Delete</button>-->
-     </div>
 </div>
+
+
+
