--- a/client/src/app/environment-selection/environment-selection.component.html
+++ b/client/src/app/environment-selection/environment-selection.component.html
@@ -1,14 +1,26 @@
-{{title}}
+<div class="container">
+    <div class="row">
+        <h1>{{title}}</h1>
+    </div>
+</div>
 
 <div class="container">
   <h2>Select an environment</h2>
-  <p>Click on the collapsible panel to open and close it.</p>
+  <div class="row" *ngFor="let item of model">
+      <h3>{{item.Name}}</h3>
+      <button type="button" (click)="setCurrentEnvironment(item)">Select</button>
+  </div>
+</div>
 
-    <accordion>
+    <!--<accordion>
         <accordion-group heading="Development"
                         [panelClass]="customClass"
                         [isOpen]="isFirstOpen">
             This content is straight in the template.
         </accordion-group>
-    </accordion>
-</div>
+        <accordion-group heading="Development"
+                        [panelClass]="customClass"
+                        [isOpen]="isFirstOpen">
+            This content is straight in the template.
+        </accordion-group>
+    </accordion>-->
