bundle gulp tasks

--- a/client/src/app/topologytype/topologytype-promobox.component.html
+++ b/client/src/app/topologytype/topologytype-promobox.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="model" class="col-sm-6 ">
     <div class="panel panel-success">
         <div class="panel-heading">
-            <strong>Mapping ({{model.Id}})</strong>
+            <strong>TopologyType ({{model.Id}})</strong>
             <button *ngIf="showActionButtons" type="button" class="icon-pencil pull-right" (click)="topologyEdit.show()">Edit</button>
             <button *ngIf="showActionButtons" type="button" class="icon-pencil pull-right" (click)="deleteItem.show()">Delete</button>
         </div>
